<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#9FF0FFFF"
    android:background="@drawable/skyblue_background"
    android:backgroundTintMode="src_over">

    <!--Gambar Obat-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="122dp"
        android:layout_marginTop="45dp"
        android:elevation="10dp">

        <!-- Gambar obat ImageView -->
        <androidx.cardview.widget.CardView
            android:layout_width="10dp"
            android:layout_height="90dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="150dp"
            android:layout_marginEnd="150dp"
            android:backgroundTint="#ffffff"
            android:layout_marginBottom="19dp"

            app:cardCornerRadius="45dp"
            app:cardElevation="20dp">

            <ImageView
                android:id="@+id/medicineImageView"
                android:layout_width="60dp"
                android:layout_height="67dp"
                android:layout_gravity="center"
                android:contentDescription="Medicine Picture"
                android:elevation="12dp"
                android:src="@drawable/obat" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>
    <!--Gambar obat ends Here-->

    <!--Textfield card-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="16dp">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                android:elevation="0dp">

                <!-- Judul -->
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="Tambahkan obat ke dalam jadwal anda"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <!-- "nama obat" spinner Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#f3f3f3"
                    card_view:cardUseCompatPadding="true"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <Spinner
                            android:id="@+id/spObat"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:backgroundTint="#9FF0FFFF"
                            android:hint="@string/hint_medicine_name"
                            android:inputType="text" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="13dp"
                            android:layout_marginEnd="23dp"
                            android:src="@drawable/thin_arrow" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <!-- "Dosis" Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="#E9F7FD"
                    app:cardCornerRadius="10dp"
                    card_view:cardUseCompatPadding="true"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <EditText
                            android:id="@+id/editTextDosage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/hint_dosage"
                            android:inputType="text"
                            android:textStyle="bold|italic" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- "Petunjuk Konsumsi" Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    app:cardCornerRadius="10dp"
                    app:cardBackgroundColor="#f3f3f3"
                    card_view:cardUseCompatPadding="true"
                    app:cardElevation="4dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="2dp">

                        <EditText
                            android:id="@+id/editTextGuide"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/hint_guidance"
                            android:textStyle="bold|italic" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Time Card -->
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:backgroundTint="#E9F7FD"
                    app:cardCornerRadius="10dp"
                    card_view:cardUseCompatPadding="true"
                    app:cardElevation="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp">

                        <Button
                            android:id="@+id/editTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@android:color/transparent"
                            android:hint="@string/hint_timeset"
                            android:inputType="time|number"
                            android:gravity="center"
                            android:textStyle="bold|italic"/>

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <!-- "Tambah" button -->
                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:height="70dp"
                    android:backgroundTint="#D9D9D9"
                    android:text="Tambah Obat"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    app:cornerRadius="10dp" />

            </LinearLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <!--card ke 2 lur-->
    <!--Textfield part ends here-->

    <!--ini notif berupa card yang bakalan muncul pas tombol pengaturan waktu dipencet-->

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/f_cardViewTime"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="#88000000"
        android:elevation="30dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="350dp"
            android:layout_height="570dp"
            android:layout_gravity="center"
            app:cardElevation="8dp"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/myImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:clickable="true"
                android:src="@drawable/icon_back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_gravity="top"
                    android:layout_marginHorizontal="67dp"
                    android:layout_marginBottom="0dp"
                    android:background="#FFFFFF"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <!-- Elemen-elemen tampilan di dalam CardView -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TimePicker
                            android:id ="@+id/timePicker"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:timePickerMode="spinner">
                        </TimePicker>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <!--buat card buat repeat day di dalam card   -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="100dp">

                <!--card buat repeat day di dalam card   -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:backgroundTint="#E9F7FD"
                    app:cardElevation="3dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="25dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="9dp"
                            android:text="Repeat">
                        </TextView>

                        <RadioGroup
                            android:id="@+id/toggleGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <CheckBox
                                android:id="@+id/cb1"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Senin"/> <!-- android:checked="true"  Ini membuat CheckBox ini sudah terpilih secara default
                                                        android:textSize="15dp" -->
                            <CheckBox
                                android:id="@+id/cb2"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Selasa"/>
                            <CheckBox
                                android:id="@+id/cb3"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Rabu"/>
                            <CheckBox
                                android:id="@+id/cb4"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Kamis"/>
                            <CheckBox
                                android:id="@+id/cb5"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Jumat"/>
                            <CheckBox
                                android:id="@+id/cb6"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Sabtu"/>
                            <CheckBox
                                android:id="@+id/cb7"
                                android:layout_width="wrap_content"
                                android:layout_height="20dp"
                                android:layout_marginLeft="13dp"
                                android:layout_marginVertical="12dp"
                                android:text="Minggu"/>
                        </RadioGroup>





                        <androidx.cardview.widget.CardView
                            android:layout_width="250dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginVertical="8dp"
                            app:cardCornerRadius="8dp"
                            app:cardElevation="5dp">
                            <Button
                                android:id="@+id/btnSimpan"
                                android:layout_width="250dp"
                                android:layout_height="40dp"
                                android:backgroundTint="@color/white"
                                android:text="Pasang Alarm"
                                android:textSize="15dp"
                                android:textStyle="bold"
                                android:textColor="@color/black">
                            </Button>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</RelativeLayout>